# tmail

./: README.md  pyproject.toml
src/temp_mail/: cli.py
src/tmail/: __main__.py  cli.py
